doc: Improve readme for sokoban